# Peanut-Engine

./: .gitignore  CMakeLists.txt  engine_language.json
dependencies/: CMakeLists.txt
dependencies/catch2/: CMakeLists.txt
dependencies/json/: CMakeLists.txt
dependencies/sfml/: CMakeLists.txt
dependencies/spdlog/: CMakeLists.txt
editor/: CMakeLists.txt
editor/include/: Component.h  ComponentDef.h  Editor.h  Entity.h  EntityDef.h  EntityTree.h  Property.h
editor/include/controls/: PropertyControl.h
editor/src/: Editor.cpp  EntityTree.cpp
resources/entities/: entity_test.json
src/: CMakeLists.txt  main.cpp
src/include/: Editor.h  Game.h  Node.h  Scene.h
src/src/: Editor.cpp  Node.cpp  main.cpp
tests/: CMakeLists.txt  test_howdy.cpp
